--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.6.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "firebase": "^5.11.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.1.0",
-    "recompose": "^0.30.0"
+    "react-test-renderer": "^16.10.2",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
+    "redux-saga-firebase": "^0.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
