--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
+    "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
     "firebase": "^5.11.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-redux": "^7.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.1.0",
-    "react-test-renderer": "^16.10.2",
+    "react-scripts": "^3.3.0",
+    "react-test-renderer": "^16.12.0",
     "recompose": "^0.30.0",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.1.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "redux-saga-firebase": "^0.15.0"
   },
   "scripts": {
